--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@ span {
   color: #f1f1f1;
 }
 
+ul {
+  padding: 0;
+}
+
 /*****************/
 /* ライトモード用 */
 /*****************/
@@ -57,8 +61,17 @@ body.light-mode select {
   border: 1px solid #ccc;
 }
 
+/* タイトル */
+body.light-mode .pageTitleContainer {
+  background-color: #f8f9fa;
+  color: #333;
+  border-bottom: none;
+  box-shadow: 0 1px 12px rgba(0, 0, 0, 0.15);
+}
+
 body.light-mode #resultList li {
-  background-color: #f1f1f1;
+  background-color: #ffffff;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
 }
 
 body.light-mode .select2-container .select2-dropdown {
@@ -86,6 +99,11 @@ body.light-mode span .select2-selection.select2-selection--single {
   height: 100%;
 }
 
+/* レンジスライダー */
+body.light-mode .inputRange {
+  border: 2px solid #333333a3;
+}
+
 /* アコーディオンメニュー */
 body.light-mode .accordion-header {
   color: #333;
@@ -111,7 +129,7 @@ body.light-mode .toggleSwitchContainer {
   color: #333;
 }
 
-body.light-mode .survey a {
+body.light-mode .bottomNavTop a {
   color: #1e1e1e;
 }
 
@@ -120,8 +138,23 @@ body.light-mode .nav-item {
 }
 
 body.light-mode .nav-item.active {
-  color: #f0c674;
-  background-color: #45a049;
+  color: white;
+  background-color: #3498db;
+}
+
+body.light-mode .bottomNavLinkWraper {
+  background-color: white;
+  border: 1px solid #d1d1d1;
+}
+
+/* disabled */
+body.light-mode select:disabled {
+  background-color: #f1f1f1;
+}
+body.light-mode
+  span.select2-container--default.select2-container--disabled
+  .select2-selection--single {
+  background-color: #f1f1f1;
 }
 
 /*---------------------------*/
@@ -134,12 +167,13 @@ body.light-mode .nav-item.active {
   max-width: 480px;
   margin: 0 auto;
   padding: 1rem;
+  margin-top: 80px;
   margin-bottom: 90px;
 }
 
 @media screen and (max-height: 800px) {
   .keyAdjustContainer {
-    margin-bottom: 170px;
+    margin-bottom: 130px;
   }
 }
 
@@ -184,7 +218,7 @@ button {
   font-size: 1rem;
   border: none;
   border-radius: 8px;
-  background-color: #4caf50;
+  background-color: #3498db;
   color: white;
   cursor: pointer;
   width: 100%;
@@ -192,8 +226,20 @@ button {
   transition: background-color 0.2s ease;
 }
 
-button:hover {
-  background-color: #45a049;
+/* タイトル */
+.pageTitleContainer {
+  margin-top: 0;
+  border-bottom: 1px solid #333;
+  padding: 1rem;
+  background-color: #181818;
+  box-shadow: 0 1px 12px rgba(0, 0, 0, 0.15);
+  position: fixed;
+  width: 100%;
+  z-index: 100;
+  top: 0;
+}
+.pageTitleContainer h1 {
+  margin: 0;
 }
 
 /* 上下補正ボタン */
@@ -254,16 +300,44 @@ button:hover {
 }
 
 /* 結果リスト */
-#resultList {
-  list-style: none;
-  padding-left: 0;
-}
-
-#resultList li {
+#resultList li.result-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background-color: #3a3a3a;
   padding: 0.6rem;
   margin-bottom: 0.5rem;
   border-radius: 6px;
+  flex-wrap: wrap; /* 小さい画面でも崩れにくい */
+}
+
+/* 左側：曲名・アーティスト名 */
+.result-info {
+  display: flex;
+  flex-direction: column;
+}
+
+/* 曲名太字 */
+.result-title {
+  font-weight: bold;
+  font-size: 1rem;
+  color: #fff;
+}
+
+/* アーティスト名 */
+.result-artist {
+  font-size: 0.85rem;
+  color: #ccc;
+}
+
+/* 右側：キー・リンク */
+.result-extra {
+  display: flex;
+  gap: 0.5rem;
+  font-size: 0.85rem;
+  color: #eee;
+  flex-shrink: 0;
+  align-items: center;
 }
 
 /* 入力欄が親の幅を超えないように */
@@ -365,6 +439,7 @@ span.select2-container--default
   border-radius: 6px;
   /* margin-bottom: 12px; */
   overflow: hidden;
+  margin-top: 15px;
   margin-bottom: 0.8rem;
   /* background-color: #2b2b2b; */
 }
@@ -385,12 +460,11 @@ span.select2-container--default
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.3s ease-out, padding 0.3s ease-out;
-  /* padding: 0 12px; */
 }
 
 .accordion-content.open {
-  max-height: 215px; /* セレクトボックスの高さに合わせ調整 */
-  /* padding: 12px; */
+  /* 最大の大きさに合わせるのでmax-height */
+  max-height: 260px;
 }
 
 /* indexのみ */
@@ -401,16 +475,61 @@ span.select2-container--default
   border-radius: 8px;
 }
 
-/* スライダー */
+/* レンジスライダー */
+.rangeLabels {
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.rangeLabel {
+  font-size: 14px;
+  color: #ccc; /* ダークテーマ用に淡いグレー */
+  white-space: nowrap;
+}
+
 .slider-container {
   display: flex;
   align-items: center;
   gap: 10px;
+  margin-top: 10px;
+}
+
+.inputRange {
+  appearance: none;
+  width: 100%;
+  height: 15px;
+  border: 1px solid #ffffff;
+  border-radius: 9999px;
+  background: linear-gradient(90deg, #4ec6ff 30%, #f5f5f5 30%);
+  cursor: pointer;
+}
+
+/* ツマミ：Chrome, Safari, Edge用 */
+.inputRange::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 24px;
+  height: 24px;
+  border: 2px solid #ffffff;
+  border-radius: 9999px;
+  background: #06b6d4;
+  box-shadow: none;
+}
+
+/* ツマミ：Firefox用 */
+.inputRange::-moz-range-thumb {
+  width: 24px;
+  height: 24px;
+  border: 2px solid #ffffff;
+  border-radius: 9999px;
+  /* background: #06b6d4; */
+  box-shadow: none;
 }
 
 input[type="range"] {
   flex: 1;
-  accent-color: #007bff; /* スライダーの色 */
+  accent-color: #007bff;
 }
 
 .step-btn {
@@ -424,6 +543,7 @@ input[type="range"] {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 0;
 }
 
 .step-btn:hover {
@@ -437,9 +557,13 @@ input[type="range"] {
   text-align: center;
 }
 
-/* アンケート */
-.survey a {
-  color: white;
+/* selectのdisabled */
+select:disabled {
+  background-color: #3a3a3a;
+}
+span.select2-container--default.select2-container--disabled
+  .select2-selection--single {
+  background-color: #3a3a3a;
 }
 
 /* ボトムナビ全体 */
@@ -448,7 +572,7 @@ input[type="range"] {
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: #111;
+  background-color: #181818;
   /* display: flex;
   justify-content: space-around; */
   padding: 0.5em 0;
@@ -462,20 +586,39 @@ input[type="range"] {
 }
 
 /* ボトムナビの上 */
-.bottomNavTop .survey {
+.bottomNavTop {
   width: 100%;
+}
+.bottomNavTop a {
   text-align: center;
+  color: white;
+  text-decoration: none;
 }
-.bottomNavTop .toggleSwitchContainer {
-  width: 100%;
-  justify-content: center;
-}
+
 .toggleSwitchContainer {
   display: flex;
   color: #fff;
 }
 
-.child-text {
+/* ボトムナビのアイコンの親要素 */
+.bottomNavLinkWraper {
+  background-color: #3a3a3a;
+  position: relative;
+  padding: 0 45px;
+  border-radius: 5px;
+  border: 1px solid #595959;
+}
+
+.bottomNavLinkWraper a {
+  position: absolute;
+  inset: 0;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.bottomNavIcon {
   margin: 0;
   font-size: 16px; /* 初期フォントサイズ */
 }
@@ -527,22 +670,49 @@ input:checked + .slider::before {
   background: none;
   border: none;
   color: #eee;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   padding: 0.5em 1em;
   cursor: pointer;
   flex: 1;
 }
 
 .nav-item.active {
-  color: #f0c674;
-  background-color: #45a049;
+  color: white;
+  background-color: #3498db;
+}
+
+/**************************/
+/* キー類似検索 */
+/**************************/
+#resultSection {
+  display: none;
+}
+#resultHeader {
+  display: flex;
+  margin-top: 20px;
+  margin-bottom: 8px;
+  align-items: center; /* 縦中央揃え */
+  gap: 8px; /* h2 と件数の間の余白 */
+}
+
+#resultHeader h2 {
+  margin: 0;
+}
+
+#resultHeader .resultCount {
+  font-size: 1rem;
+  color: #f0c674; /* 件数だけ目立たせる色 */
+}
+
+.index-song {
+  margin-top: 15px;
 }
 
 /**************************/
 /* キー調整シミュレーション */
 /**************************/
 #referenceSection {
-  margin-top: 20px;
+  /* margin-top: 15px; */
 }
 
 .key-tips {
@@ -599,6 +769,13 @@ input:checked + .slider::before {
 }
 
 /**************************/
+/* 歌い手キー */
+/**************************/
+#utaiteSection {
+  margin-top: 15px;
+}
+
+/**************************/
 /* キーの範囲検索 */
 /**************************/
 #piano-container {
@@ -611,10 +788,10 @@ input:checked + .slider::before {
   padding-top: 0;
 }
 
-.key {
+/* .key {
   position: relative;
   border: 1px solid #000;
-}
+} */
 
 .key.white {
   width: 150px;
@@ -656,20 +833,16 @@ input:checked + .slider::before {
   background: #4caf50;
 }
 
-#searchButton {
+.searchButton {
   width: 100%;
-  background-color: #4caf50;
+  background-color: #3498db;
   color: white;
   border: none;
   padding: 12px;
   font-size: 16px;
-  border-radius: 6px;
+  border-radius: 25px;
   cursor: pointer;
-  margin-top: 10px;
-}
-
-#searchButton:hover {
-  background-color: #45a049;
+  margin-top: 35px;
 }
 
 #searchBtn {
@@ -681,4 +854,11 @@ input:checked + .slider::before {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+
+/**************************/
+/* その他 */
+/**************************/
+.marginTop15 {
+  margin-top: 15px;
 }
